# Rainb0t

./: LICENSE.md  README.md  bot.py  config.py  pyproject.toml
cogs/: general.py  help.py  moderation.py  owner.py  template.py
