[tool.poetry]
name = "rainb0t"
version = "0.1.0"
description = ""
authors = ["Rainb0w"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = {extras = ["voice"], version = "^1.6.0"}
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
